--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.hikari.jdbc-url=jdbc:h2:~/test;FILE_LOCK=NO
 spring.datasource.hikari.username=
 spring.datasource.hikari.password=
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.liquibase.change-log=classpath:db.changelog.xml
 spring.jpa.show-sql=true
+
+spring.liquibase.change-log=classpath:db.changelog.xml
+spring.liquibase.enabled=true
